test/pass/show/show_circular.lly
var a: list[any] = [1, 2]
a[0] = a
show(a)
