test/fail/basic_syntax/invalid_binary_result_assign.lly
#[
SyntaxError: Left side of = is not assignable.
    from invalid_binary_result_assign.lly:8
]#

var a = 1
if 1:
    (a + a) = 1
